# braid_tools

./: .gitignore  CLAUDE.md  CLAUDE_instructions_alignment_script.md  CLAUDE_instructions_single_camera_strand_data_collection.md  CMakeLists.txt  NVENC_UPGRADE_TODO.md  README.md  TRIGGERED_VIDEO_QUICKSTART.md  TRIGGERED_VIDEO_SYSTEM.md  braid_tools_mapping_rules.yaml  package.xml  requirements.txt  setup.py
analysis/: 20240530_110841_braid_objects.hdf5
braid_analysis/: __init__.py  bag2hdf5_python3.py  braid_2d_analysis.py  braid_analysis_plots.py  braid_filemanager.py  braid_slicing.py  flymath.py  preprocess_braidz.py
braid_calibration_mcsc_alignment/: README.md  align_calibration.py  align_core.py
braid_calibration_mcsc_alignment/example_calibration_data/: bigwindtunnel_stim.xml
braid_calibration_mcsc_alignment/example_calibration_data/20251120_calibration/aligned/: 20251121_134739-aligned.transform.json  20251121_134739-aligned.xml
braid_calibration_mcsc_alignment/example_calibration_data/20251120_calibration/unaligned/: 20251121_134739-unaligned.xml
example/: README.md  example_load_braid_hdf5_to_pandas.ipynb
example/analysis/: braid_2d_analysis_demo.ipynb  braid_analyze_obj_ids_at_trigger.ipynb  braid_diagnostic_plots.ipynb  preprocess_braidz.py  preprocessing_parameters.yaml
example/angular_velocity_demo/: README.md  braidz_show_angular_velocity.ipynb  preprocess_braidz.py
example/fly_data/analysis/: load_sample_data_show_saccades.ipynb
launch/: braid_listener.launch  braid_listener.launch.py  braid_listener_and_live_plotter.launch.py  braid_listener_and_live_plotter_bigtunnel.launch  braid_triggered_video_pipeline.launch.py  braid_triggered_video_saver.launch.py
msg/: BraidTrigger.msg  FlydraMainbrainPacket.msg  FlydraMainbrainSuperPacket.msg
nodes/: braid_emulator.py  braid_realtime_plotter.py  braid_ros_listener.py  braid_save_data_to_hdf5.py  braid_trigger_adapter.py  braid_triggered_video_saver.py  topic_relay_client.py  topic_relay_server.py
plot_config/: big_tunnel.yaml  small_tunnel.yaml
relay_config/: relay_topics.yaml
scripts/: README.md  compress_for_aws.sh
src/: braid_ros_listener.py
strand_scripts/: README.md  calibrate_aux_camera.py  collect_led_calibration_data.py  dump_detection_config.py  led_calibration.toml  led_calibration_merge.py
video_config/: triggered_video_saver.toml
