<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>braid_tools</name>
  <version>1.0.0</version>
  <description>Tools for interfacing Braid with ROS 2: listener, emulator, live plotter, and hdf5 recorder.</description>

  <maintainer email="fvanbreugel@unr.edu">Floris van Breugel</maintainer>
  <maintainer email="bcellini@unr.edu">Ben Cellini</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-h5py</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- braid_emulator.py additionally requires pynumdiff (pip-only, see README) -->
  <!-- braid_triggered_video_saver.py additionally requires the strand-braid deb
       (provides the strand-cam and show-timestamps executables) -->


  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="braid_tools_mapping_rules.yaml"/>
  </export>
</package>
